--- a/CVSITEHT2021.csproj
+++ b/CVSITEHT2021.csproj
@@ -229,6 +229,10 @@
     <Compile Include="Migrations\202201041306565_sampve2.Designer.cs">
       <DependentUpon>202201041306565_sampve2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202201051053447_newest migration.cs" />
+    <Compile Include="Migrations\202201051053447_newest migration.Designer.cs">
+      <DependentUpon>202201051053447_newest migration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Project.cs" />
@@ -238,6 +242,7 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repo\CVRepository.cs" />
+    <Compile Include="Repo\ProjectRepository.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -334,6 +339,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202201041306565_sampve2.resx">
       <DependentUpon>202201041306565_sampve2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202201051053447_newest migration.resx">
+      <DependentUpon>202201051053447_newest migration.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
