--- a/CVSITEHT2021.csproj
+++ b/CVSITEHT2021.csproj
@@ -243,6 +243,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repo\CVRepository.cs" />
     <Compile Include="Repo\ProjectRepository.cs" />
+    <Compile Include="Services\CvService.cs" />
+    <Compile Include="Services\ImageService.cs" />
+    <Compile Include="Shared\Models\CvEditViewModel.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
