--- a/CVSITEHT2021.csproj
+++ b/CVSITEHT2021.csproj
@@ -260,18 +260,9 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\MessagesViewModel.cs" />
-    <Compile Include="Models\Message.cs" />
-    <Compile Include="Models\Project.cs" />
-    <Compile Include="Models\CVDatabase.cs" />
-    <Compile Include="Models\CV.CS" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repo\MessageRepository.cs" />
-    <Compile Include="Repo\CVRepository.cs" />
-    <Compile Include="Repo\ProjectRepository.cs" />
-    <Compile Include="Services\CvService.cs" />
-    <Compile Include="Services\ImageService.cs" />
     <Compile Include="Shared\ImageService.cs" />
     <Compile Include="Models\CvEditViewModel.cs" />
     <Compile Include="Startup.cs" />
@@ -387,6 +378,12 @@
     <EmbeddedResource Include="Migrations\202201091619369_mymsg.resx">
       <DependentUpon>202201091619369_mymsg.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\data\data.csproj">
+      <Project>{43ab374c-f6b6-4edc-938c-54b10c2f8ce2}</Project>
+      <Name>data</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
